# QtDemo

./: CMakeLists.txt  README.md  main.cpp
adapters/: opettajaadapter.h  opiskelijaadapter.cpp
domain/: person.h  program.cpp  school.cpp  student.h
infra/repositories/: entiteettikoulutusohjelmarepository.cpp  koulutusohjelmanentiteettirepository.cpp  opettajaentiteettirepository.cpp  opiskelijaentiteettirepository.cpp  opiskelijaentiteettirepository.h  programstudentrepository.h  programteacherrepository.h  schoolrepository.cpp  studentrepository.cpp
model/: programteacherlistmodel.h  teacherlistmodel.h  teacherprogramlistmodel.h
services/: programassociationservice.h  programstudentassociationservice.cpp
sql/: fetch_programs.sql  fetch_programstudents.sql  fetch_teacherprograms.sql  fetch_teachers.sql  insert_program.sql  link_programteacher.sql  schema.sql
src/: main.cpp  resources.qrc
src/adapters/: koulutusohjelmanentiteetti.cpp  koulutusohjelmanentiteetti.h  opettajaadapter.cpp  opiskelijaadapter.h
src/domain/: person.cpp  person.h  program.cpp  program.h  school.cpp  school.h  student.cpp  student.h  teacher.cpp  teacher.h  worker.cpp  worker.h
src/infra/: databaseservice.cpp  databaseservice.h
src/infra/repositories/: entiteettikoulutusohjelmarepository.h  koulutusohjelmanentiteettirepository.h  opettajaentiteettirepository.h  opettajakoulutusohjelmarepository.cpp  opettajakoulutusohjelmarepository.h  programrepository.cpp  programrepository.h  programstudentrepository.cpp  programstudentrepository.h  programteacherrepository.cpp  programteacherrepository.h  schoolrepository.cpp  schoolrepository.h  studentrepository.cpp  studentrepository.h  teacherrepository.cpp  teacherrepository.h
src/model/: programassociationitemlistmodel.cpp  programassociationitemlistmodel.h  programlistmodel.cpp  programlistmodel.h  programstudentlistmodel.cpp  programstudentlistmodel.h  programteacherlistmodel.cpp  teacherlistmodel.cpp  teacherprogramlistmodel.cpp
src/services/: programassociationservice.cpp  programassociationservice.h  programservice.cpp  programservice.h  programstudentassociationservice.cpp  programstudentassociationservice.h  programteacherassociationservice.cpp  programteacherassociationservice.h  teacherservice.cpp  teacherservice.h
src/sql/: delete_program.sql  delete_program_teacher.sql  delete_student.sql  delete_teacher.sql  fetch_programteachers.sql  fetch_studentprograms.sql  fetch_students.sql  fetch_studentsnotinprogram.sql  fetch_teachersnotinprogram.sql  initial_data.sql  insert_student.sql  insert_teacher.sql  link_programstudent.sql  unlink_programstudent.sql  unlink_programteacher.sql
src/ui/: additemtoprogramdialog.cpp  additemtoprogramdialog.h  additemtoprogramdialog.ui  addopiskelijadialog.cpp  addopiskelijadialog.h  addprogramdialog.cpp  addprogramdialog.ui  addteacherdialog.cpp  addteacherdialog.ui  confirmremovedialog.cpp  confirmremovedialog.ui  itemdetailsdialog.cpp  itemdetailsdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/domain/: test_person.cpp  test_program.cpp  test_school.cpp  test_student.cpp  test_teacher.cpp  test_worker.cpp
tests/infra/: test_databaseservice.cpp  test_programrepository.cpp  test_programstudentrepository.cpp  test_programteacherrepository.cpp  test_studentrepository.cpp  test_teacherrepository.cpp
tests/services/: fakeprogramrepository.h  fakeprogramstudentrepository.h  fakeprogramteacherrepository.h  faketeacherrepository.h  test_programservice.cpp  test_programstudentassociationservice.cpp  test_programteacherassociationservice.cpp  test_teacherservice.cpp
ui/: additemtoprogramdialog.cpp  addopiskelijadialog.ui  addprogramdialog.h  addteacherdialog.h  addteacherdialog.ui  confirmremovedialog.h  itemdetailsdialog.h  mainwindow.cpp  mainwindow.ui
